tests/baselines/reference/unusedTypeParameterInInterface2.errors.txt
tests/cases/compiler/unusedTypeParameterInInterface2.ts(1,18): error TS6133: 'U' is declared but its value is never read.


==== tests/cases/compiler/unusedTypeParameterInInterface2.ts (1 errors) ====
    interface int<T, U, V> {
                     ~
!!! error TS6133: 'U' is declared but its value is never read.
        f1(a: T): string;
        c: V;
    }